--- a/home/index.html
+++ b/home/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Echo's Repos - Home</title>
+    <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <h1>Placeholder</h1>
+  </body>
+</html>
