--- a/home/index.html
+++ b/home/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Echo's Repos - Home</title>
-    <meta charset="UTF-8">
-	  <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width">
   </head>
   <body>
     <h1>Placeholder</h1>
