--- a/home/index.html
+++ b/home/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <h1>Placeholder</h1>
+    <div id="container">
+      <h1>Placeholder</h1>
+    </div>
   </body>
 </html>
