--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>Placeholder</h1>
+      <h1><em>Home Page</em></h1>
     </div>
   </body>
 </html>
