--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@
     <title>Echo's Repos - Home</title>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <div id="container">
