--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="container">
-      <h1><em>Home Page</em></h1>
+      <h1><strong>Home Page</strong></h1>
     </div>
   </body>
 </html>
