--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div id="container">
+    <div id="title">
       <h1><strong>Home Page</strong></h1>
     </div>
   </body>
