--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
       <h1><strong>Home Page</strong></h1>
     </div>
     <div id="content">
-      <iframe height="250" src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe height="250" src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
   </body>
 </html>
