--- a/home/index.html
+++ b/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Echo's Repos - Home</title>
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/raleway" type="text/css"/>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css"/>
   </head>
