--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="title">
-      <h1><strong>Home Page</strong></h1>
+      <h1><strong>HOME PAGE</strong></h1>
     </div>
     <div id="container">
       <div id="content">
