--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
       <h1><strong>Home Page</strong></h1>
     </div>
     <div id="container">
-      <div id="content">
+      <div id="slidecontainer">
         <iframe height="250" src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
