--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,9 @@
     </div>
     <div id="container">
       <div id="slidecontainer">
-        <iframe height="300" src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="slide">
+          <iframe src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </body>
