--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Echo's Repos - Home</title>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/raleway" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/roboto" type="text/css"/>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css"/>
   </head>
@@ -11,6 +12,10 @@
       <h1><strong>Home Page</strong></h1>
     </div>
     <div id="container">
+      <div id="heading">
+        <h1>Welcome to home</h1>
+        <p>At the moment, this website serves no purpose but for me to practice HTML. Below is random stuff I decided to add.</p>
+      </div>
       <div id="slidecontainer">
         <div class="slide">
           <iframe src="https://www.youtube.com/embed/fuM3eazyBhM" title="With the Stars and Us (Piano Version) - Persona 5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video"></iframe>
