--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
     <div id="container">
       <div id="heading">
         <h1>Welcome to home</h1>
-        <p>At the moment, this website serves no purpose but for me to practice HTML. Below is random stuff I decided to add.</p>
+        <p>At the moment, this website serves no purpose but for me to practice HTML, CSS, and JavaScript. Below is random stuff I decided to add.</p>
       </div>
       <div id="slidecontainer">
         <div class="slide">
